Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28126

Dropping text erases any text selected in destination

XMLWordPrintable

    • 9456052207 (qt-creator/qt-creator/8.0) 9456052207 (qt-creator/qt-creator/master) 9456052207 (qt-creator/qt-creator/9.0) 9456052207 (qt-creator/qt-creator/qds-3.7)

      When text is dragged and dropped from one editor window to another, if there is any selected text within the destination editor, it is being deleted when the new text is dropped. This is serious because the selected text might not even be within the current view and you wouldn't know that Qt Creator is silently deleting chunks of your code. 

      Steps to reproduce
      1. Open one text file.
      2. In another split/editor, open a second text file.
      3. Select some text near the top of the second text file.
      4. Select some text in the first text file and drag and drop it onto the second text file, near the bottom.

      Might be related to QTCREATORBUG-28125 (i.e. the bug is that the text selected in the destination editor is being erased instead of the text selected in the source editor).

        For Gerrit Dashboard: QTCREATORBUG-28126
        # Subject Branch Project Status CR V

            davschul David Schulz
            ryan.cuthbertson Ryan Cuthbertson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes